testsuite/tests/grammar/invalid_parserless/unref_node.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- ExampleNode(null(ParserlessNode))
}

@abstract class FooNode implements Node[FooNode] {
}

class ExampleNode : FooNode {
    @parse_field n: ParserlessNode
}

class ParserlessNode : FooNode {
}
